grammar.js
    source_file: ($) => repeat($._top_item),

    _top_item: ($) => choice($.start_marker, $.end_marker, $._macro_body),

    start_marker: ($) => seq(start_kw, /59/, optional(hnext_kw)),

    end_marker: ($) => seq(optional($.jump_to), end_kw),

    _macro_body: ($) =>
      choice(
        // Label-only line
        seq($.jump_to, $._eol),

        // Normal statement line
        seq(
          optional($.jump_to),
          choice(
            prec(PREC.parenthesized, $.parenthesis),
            $.expression,
            $.loop,
            $.input,
            $.file_operation,
            $.jump,
            $.esc_statement,
          ),
          optional($._eol),
        ),

        // IF handles its own structure.
        $.condition,
      ),

    _eol: ($) => /\r?\n/,
    esc_statement: ($) => esc_kw,

    expression: ($) =>
      choice(
        $.definition,
        $.echo,
        $.wait,
        $.warte,
        $.guidance_noarg,
        $.menu,
        $.logic_operation,
        $.function,
        $.string_function,
        $.system_function,
      ),

    guidance_noarg: ($) => choice(...guidance_noargs),

    parenthesis: ($) => seq("(", repeat($._macro_body), ")"),

    echo: ($) => seq($.echo_kw, token(prec(PREC.echo_text, /[^\n\r]+/))),
    echo_kw: ($) => echo_kw,

    wait: ($) =>
      seq(
        $.wait_kw,
        choice(
          $.num_variable,
          $.char_variable,
          token(prec(PREC.echo, /[^\n\r]+/)),
        ),
      ),

    wait_kw: ($) => wait_kw,

    warte: ($) => seq($.warte_kw, $.int),

    warte_kw: ($) => warte_kw,

    definition: ($) =>
      choice($.num_definition, $.char_definition, $.assignment),

    num_definition: ($) =>
      seq($.num_variable, choice(...assignment_operator), $.arithmetic),

    char_definition: ($) =>
      seq(
        $.char_variable,
        choice(...assignment_operator),
        choice($.free_text, $.char_literal, $.char_value),
      ),

    free_text: ($) => token(prec(PREC.general, /[^\n\r]+/)),

    assignment: ($) =>
      choice(
        seq($.vai_kw, $.num_variable, optional(/.*/)),
        seq(
          $.var_kw,
          choice(
            $.num_variable,
            $.char_variable,
            $.point_literal,
            $.line_literal,
          ),
          optional(/.*/),
        ),
        seq(
          $.pfd_kw,
          choice($.char_variable, $.path_indicator, $.file_extension),
        ),
        seq($.del_kw, choice($.char_variable, $.num_variable)),
      ),

    del_kw: ($) => del,

    arithmetic: ($) =>
      choice(
        $.binary_operator,
        $.unary_operator,
        $.parenthesized_expression,
        $.arithmetic_function,
        $.special2Dvariable,
        $.num_value,
        $.num_variable,
        $.num_sys_var,
        $.val_function,
        $.len_function,
        $.idx_function,
        $.asc_function,
        $.general_variable,
      ),

    unary_operator: ($) =>
      prec.right(
        PREC.power,
        seq(field("operator", "-"), field("operand", $.arithmetic)),
      ),

    asc_function: ($) => seq(asc_kw, "(", $.string_argument, ")"),

    // IDX takes two strings
    idx_function: ($) =>
      seq(idx_kw, "(", $.string_argument, ",", $.string_argument, ")"),

    // String functions that return char
    string_function: ($) =>
      choice($.string_alt_function, $.chr_function, $.time_function),

    string_argument: ($) =>
      choice(
        $.char_variable,
        $.char_sys_var,
        $.quoted_char,
        $.char_literal,
        $.concat_char,
        $.string_function,
      ),

    // String case alteration
    string_alt_function: ($) =>
      seq(choice(ltu_kw, utl_kw), "(", $.string_argument, ")"),

    system_function: ($) => choice(faa_kw, fae_kw),

    // CHR function takes number between 0 255
    chr_function: ($) => seq(chr_kw, "(", $.chr_num_literal, ")"),

    // Single token functions
    time_function: ($) => choice(time_kw, date_kw),

    num_variable: ($) => seq($.num_var_sign, $.num_var_name),

    num_var_sign: ($) => /%/,

    num_var_name: ($) => token(/([A-Z]|[a-z])([A-Z]|[a-z]|[0-9]|_){0,29}/),

    general_variable: ($) =>
      token(prec(PREC.general, /([A-Z]|[a-z])([A-Z]|[a-z]|[0-9]|_){0,29}/)),

    num_value: ($) => choice($.real, $.int),

    real: ($) => /[+-]?([0-9]*[.])?[0-9]+/,

    int: ($) => token(/([0-9]|[1-9][0-9])/),

    char_variable: ($) =>
      prec.right(
        PREC.char,
        seq($.char_var_sign, $.identifier, optional($.char_operand)),
      ),

    char_var_sign: ($) => "$",

    identifier: ($) => token(/[A-Za-z][A-Za-z0-9_-]*/),

    char_value: ($) =>
      choice(
        $.windows_path,
        $.quoted_char,
        $.concat_char,
        $.char_variable,
        $.char_sys_var,
        $.string_function,
      ),

    quoted_char: ($) =>
      seq('"', optional($._quoted_char_content), token.immediate('"')),

    _quoted_char_content: ($) => token.immediate(/[^"\n\r]+/),

    char_literal: ($) => token(prec(PREC.literals, /[^$%\s"()]+/)),

    windows_path: ($) => choice($.unc_path, $.local_path),

    // Allows hyphens in host/path parts.
    local_path: ($) => seq(/[A-Z]:\\/, /[A-Za-z0-9_.\\-]{1,256}/),

    concat_char: ($) =>
      seq(
        choice($.quoted_char, $.char_variable, $.char_sys_var),
        repeat1(
          seq("+", choice($.char_variable, $.char_sys_var, $.quoted_char)),
        ),
      ),

    char_sys_var: ($) => /\$@([A-Z]|[a-z]|[0-9]){1,3}/,

    if_kw: ($) => if_kw,
    then_kw: ($) => then_kw,
    else_kw: ($) => else_kw,
    ifend_kw: ($) => ifend_kw,

    for_kw: ($) => for_kw,
    to_kw: ($) => to_kw,
    next_kw: ($) => next_kw,

    whend_kw: ($) => whend_kw,
    while_kw: ($) => while_kw,

    condition: ($) =>
      prec(
        PREC.flow,
        choice(
          // Inline IF: IF <cond> GOTO <label>
          seq(
            $.if_kw,
            $.logical_expression,
            prec(PREC.jump, $.jump),
            optional($._eol),
          ),

          // Block IF: IF <cond> THEN ... IFEND
          seq($.if_kw, $.logical_expression, $.then_kw, $.condition_alt),
        ),
      ),

    condition_alt: ($) =>
      choice(
        seq(optional($.condition_block), $.ifend_kw),
        $.condition_alt_case,
      ),

    condition_alt_case: ($) =>
      seq(
        optional($.condition_block),
        $.else_kw,
        optional($.condition_block),
        $.ifend_kw,
      ),

    condition_block: ($) =>
      repeat1(
        choice(
          prec(PREC.parenthesized, $.parenthesis),
          $.expression,
          $.condition,
          $.loop,
          $.input,
          $.jump,
          $.jump_to,
          $.file_operation,
        ),
      ),

    loop: ($) =>
      prec(PREC.flow, choice($.for_loop, $.while_loop, $.repeat_loop)),

    for_header: ($) =>
      seq(
        $.for_kw,
        field("variable", $.num_variable),
        choice(...assignment_operator),
        field("from", $.arithmetic),
        $.to_kw,
        field("to", $.arithmetic),
      ),

    for_end: ($) =>
      seq(
        $.next_kw,
        field("next_variable", choice($.general_variable, $.num_variable)),
      ),

    for_loop: ($) =>
      prec(PREC.flow, seq($.for_header, repeat($._macro_body), $.for_end)),

    while_loop: ($) =>
      seq($.while_kw, $.logical_expression, repeat($._macro_body), $.whend_kw),

    logical_expression: ($) =>
      prec.left(
        seq(
          optional($.negation),
          $.comparison,
          repeat(seq($.logical_op, $.comparison)),
        ),
      ),

    logical_var: ($) => choice(...logical_variable),

    flow_args: ($) => choice(...flow_arguments),

    comparison: ($) =>
      prec(
        PREC.flow,
        choice($.num_comparison, $.char_comparison, $.logical_var, $.flow_args),
      ),

    num_comparison: ($) =>
      prec(
        PREC.arithmetic,
        seq($.arithmetic, $.comparative_operator, $.arithmetic),
      ),

    char_comparison: ($) =>
      prec(
        PREC.char,
        seq($.char_expression, $.comparative_operator, $.char_expression),
      ),

    char_expression: ($) =>
      choice(
        $.char_variable,
        $.char_sys_var,
        $.quoted_char,
        $.concat_char,
        $.string_function,
      ),

    comparative_operator: ($) => choice(...comparative_operators),

    // Conservative OPTION handling:
    // OPTION is treated as a simple command, not an implicit block.
    menu: ($) =>
      prec(
        PREC.menu,
        seq($.option_kw, choice(seq($.menu_index, $.menu_code), esc_kw)),
      ),

    option_kw: ($) => option_kw,

    menu_index: ($) => /([1-9]|[12][0-9]|3[0])/,

    menu_code: ($) => /[0-9]{1,3}/,

    input: ($) => choice($.scal_input, $.point, $.distance, $.angle),

    scalar_in: ($) => choice(...scalar_input, $.input_kw),

    scal_input: ($) => seq($.scalar_in, $.scal_value),
    input_kw: ($) => input_kw,

    scal_value: ($) =>
      choice(
        $.flow_args,
        $.char_value,
        $.char_literal,
        $.num_variable,
        $.text_value,
      ),

    text_value: ($) => token(prec(PREC.literals, /[^\s"$%#][^\n\r]*/)),

    file_operation: ($) =>
      choice($.file_open, $.file_close, $.file_write, $.file_copy, $.mkdir),

    file_open: ($) =>
      seq($.open_kw, choice($.hc_path, $.flow_args, $.char_variable)),

    file_close: ($) => $.close_kw,

    file_write: ($) =>
      seq($.output_kw, choice($.char_variable, $.num_variable)),
    output_kw: ($) => output_kw,

    open_kw: ($) => open_kw,
    close_kw: ($) => close_kw,

    file_copy: ($) =>
      prec(
        PREC.file,
        seq(
          $.copy_kw,
          choice($.char_variable, $.windows_path),
          choice($.char_variable, $.windows_path),
        ),
      ),
    copy_kw: ($) => copy_kw,

    mkdir: ($) =>
      prec(PREC.file, seq($.mkdir_kw, choice($.char_variable, $.windows_path))),
    mkdir_kw: ($) => mkdir_kw,

    hc_path: ($) => seq(optional($.path_indicator), $.filename),

    path_indicator: ($) => /([A-Z]|[0-9]|#):/,

    filename: ($) => /([A-Za-z]|[0-9]|_|-){1,40}/,

    function_c: ($) => choice(...function_call),

    function: ($) => seq($.function_c, choice($.char_variable, $.hc_path)),

    jump: ($) => seq($.goto_kw, $.label),
    goto_kw: ($) => goto_kw,

    label: ($) => /[0-9]{1,6}/,

    jump_to: ($) => seq($.label, ":"),

    point_lit_ind: ($) => choice(...point_literal_indicators),

    // POINT punktoption / # / ESC / END/ LLL / LLA
    point_kw: ($) => point_kw,
    point: ($) =>
      prec.right(
        seq(
          $.point_kw,
          choice(
            $.point_opt_option,
            $.point_2p_option,
            $.point_a_option,
            $.point_reference,
          ),
        ),
      ),

    // Arguments are optional, but not more than two
    point_opt_option: ($) =>
      prec.right(
        PREC.keyword,
        choice(
          seq(
            $.point_opt_argument_indicator,
            $._point_sep,
            $.point_argument,
            $._point_sep,
            $.point_argument,
          ),
          seq($.point_opt_argument_indicator, $._point_sep, $.point_argument),
          $.point_opt_argument_indicator,
        ),
      ),

    point_opt_argument_indicator: ($) => token(prec(PREC.keyword, /[RNL]/)),

    // Must have 2 or 3 args
    point_a_option: ($) =>
      prec.right(
        PREC.keyword,
        choice(
          // POINT A 0 0 0
          prec(
            PREC.keyword + 2,
            seq(
              $.point_a_indicator,
              $._point_sep,
              $.point_argument,
              $._point_sep,
              $.point_argument,
              $._point_sep,
              $.point_argument,
            ),
          ),
          // POINT A 0 0
          prec(
            PREC.keyword + 1,
            seq(
              $.point_a_indicator,
              $._point_sep,
              $.point_argument,
              $._point_sep,
              $.point_argument,
            ),
          ),
          // POINT A0 Y Z
          prec(
            PREC.keyword + 2,
            seq(
              $.point_a_indicator,
              $.point_immediate_argument,
              $._point_sep,
              $.point_argument,
              $._point_sep,
              $.point_argument,
            ),
          ),
        ),
      ),

    point_a_indicator: ($) => token(prec(PREC.keyword, /A/)),

    point_a_indicator: ($) => token(prec(PREC.keyword, /A/)),
    point_immediate_argument: ($) =>
      choice($.point_immediate_real, $.point_immediate_int),

    point_immediate_int: ($) =>
      token.immediate(prec(PREC.keyword + 1, /[0-9]+/)),

    // Explicitly tab or space. Normaly a space would be ignored,
    // but we cant do that in POINT, because it separates the arguments.
    _point_sep: ($) => token.immediate(/[ \t]+/),

    point_reference: ($) =>
      choice(
        $.point_ar_reference,
        $.point_number,
        $.point_literal,
        $.line_literal,
        $.point_lit_ind,
      ),

    point_ar_reference: ($) => token(prec(PREC.keyword + 1, /AR/)),

    point_argument: ($) =>
      choice($.point_literal, $.line_literal, $.point_arithmetic),

    point_arithmetic: ($) =>
      choice(
        $.point_binary_operator,
        $.point_unary_operator,
        $.point_parenthesized_expression,
        $.point_num_value,
        $.num_variable,
        $.num_sys_var,
        $.special2Dvariable,
        $.point_identifier,
        $.arithmetic_function,
        $.val_function,
        $.len_function,
        $.idx_function,
        $.asc_function,
      ),

    point_binary_operator: ($) => {
      const arithmetic_operators = [
        [prec.left, token.immediate("+"), PREC.plus],
        [prec.left, token.immediate("-"), PREC.plus],
        [prec.left, token.immediate("/"), PREC.times],
        [prec.left, token.immediate("*"), PREC.times],
        [prec.left, token.immediate("^"), PREC.power],
      ];

      return choice(
        ...arithmetic_operators.map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field("left", $.point_arithmetic),
              field("operator", operator),
              field("right", $.point_arithmetic),
            ),
          ),
        ),
      );
    },

    point_unary_operator: ($) =>
      prec.right(
        PREC.power,
        seq(field("operator", "-"), field("operand", $.point_arithmetic)),
      ),

    point_parenthesized_expression: ($) =>
      prec(PREC.parenthesized, seq("(", $.point_arithmetic, ")")),

    point_identifier: ($) => token(prec(PREC.keyword, /[A-Za-z][A-Za-z0-9_]*/)),

    point_num_value: ($) => choice($.point_real, $.point_int),
    point_real: ($) => token(prec(PREC.general, /[0-9]+\.[0-9]+/)),
    point_int: ($) => token(prec(PREC.general, /[0-9]+/)),
    point_number: ($) => token(prec(PREC.keyword, /[0-9]{1,6}/)),
    distance: ($) =>
      prec.right(seq($.distance_kw, choice($.flow_args, zei_kw, $.arithmetic))),

    distance_kw: ($) => distance_kw,

    comment: ($) => token(prec(PREC.comment, /REM.*/i)),
