test/corpus/jumps2.txt
================================================================================
Return jumps
================================================================================

REM jumps2

START   59

GOTO 99

99:END

--------------------------------------------------------------------------------

(source_file
  (comment)
  (start_marker
    (start_menu_index))
  (jump
    (goto_kw)
    (label))
  (end_marker
    (jump_to
      (label))))
