test/corpus/liste.txt
================================================================================
Return liste
================================================================================


START   59

REM List calls

REM   LINIEN   1 = Isolierte Pkt
OPTION   1   6
ZUSATZ          -1
POINT   R
POINT   I
LINE             8         0
WIED             0         0
WIED             0         0         0         0         0
WIED             0         0         0         0         0

END

--------------------------------------------------------------------------------

(source_file
  (start_marker
    (start_menu_index))
  (comment)
  (comment)
  (expression
    (menu
      (option_kw)
      (menu_index)
      (menu_code)))
  (expression
    (zusatz_function
      (zusatz_kw)
      (arithmetic
        (num_value
          (real)))))
  (input
    (point
      (point_kw)
      (point_opt_option
        (point_opt_argument_indicator))))
  (input
    (point
      (point_kw)
      (point_no_args)))
  (expression
    (line_function
      (line_kw)
      (line_arg)
      (line_arg)
      (wied_continuation
        (wied_continuation_kw)
        (line_arg)
        (line_arg))
      (wied_continuation
        (wied_continuation_kw)
        (line_arg)
        (line_arg)
        (line_arg)
        (line_arg)
        (line_arg))
      (wied_continuation
        (wied_continuation_kw)
        (line_arg)
        (line_arg)
        (line_arg)
        (line_arg)
        (line_arg))))
  (end_marker))
