test/corpus/loops.txt
================================================================================
Return loops
================================================================================

START   59

FOR %IJ:=0 TO ANZB
    WAIT Test
NEXT IJ

WHILE VORHD
  WAIT Test
WHEND

WHILE %XY>5
    $YZ:=42
WHEND

END

--------------------------------------------------------------------------------

(source_file
  (start_marker
    (start_menu_index))
  (loop
    (for_loop
      (for_header
        (for_kw)
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (num_value
            (real)))
        (to_kw)
        (arithmetic
          (general_variable)))
      (expression
        (wait
          (wait_kw)))
      (for_end
        (next_kw)
        (general_variable))))
  (loop
    (while_loop
      (while_kw)
      (logical_expression
        (comparison
          (logical_var)))
      (expression
        (wait
          (wait_kw)))
      (whend_kw)))
  (loop
    (while_loop
      (while_kw)
      (logical_expression
        (comparison
          (num_comparison
            (arithmetic
              (num_variable
                (num_var_sign)
                (num_var_name)))
            (comparative_operator)
            (arithmetic
              (num_value
                (real))))))
      (expression
        (definition
          (char_definition
            (char_variable
              (char_var_sign)
              (identifier))
            (free_text))))
      (whend_kw)))
  (end_marker))
