test/corpus/menu.txt
================================================================================
Return menu
================================================================================

REM Use a different Menu start.
START   101
HNEXT


REM simple menu call
OPTION 2 59
ESC

REM Is not tied to OPTION here
SAUS

REM Option with just ESC
OPTION ESC

REM Continuation of option. Point takes arithmetic
OPTION 1 2
  POINT   A 0 -(AKB-AKBV+BKY2+60)
  POINT R
  POINT R D 0
  POINT R D+DN*MZ4 0
  POINT A 0 -(AKB-AKBV+BKY2+60)
  POINT A AKB+BY13+20 10
  POINT 69
  POINT ESC
  POINT #
  POINT   A 0 0
  POINT INT
  POINT A FY+FSY+17.5+19 4.9
  POINT AR

  REM 3D coordinates
  POINT A 0 0 0
  REM Special case where A0 is actually A 0 and 0 is X-coord. Should be avoided.
  POINT A0 Y Z

  REM Immediate coordinates. Work, but should be avoided
  REM POINT 42 43

  REM Distance
  DISTANZ -LH

  REM Somehow valid, dont know what it does though
  POINT N !
  POINT J Z8 Z9

REM Nested menu
IF $PROG <> "xxxx" THEN
   OPTION  30   0
   REM     Dateiname :
   IF K99 <= 500 THEN
      STRING  $PROG
      STRING  RET
   ELSE
      STRING  XXXX
   IFEND
IFEND
ESC

REM various string examples
STRING  $PROG
STRING  10-30%181mµéàèçai
STRING  "HCM_"+$@9
STRING #

REAL RET

REM ignores the rest until a OPTION
IGNORE

END

--------------------------------------------------------------------------------

(source_file
  (comment)
  (start_marker
    (start_menu_index))
  (comment)
  (expression
    (menu
      (option_kw)
      (menu_index)
      (menu_code)))
  (esc_statement)
  (comment)
  (expression
    (guidance_noarg))
  (comment)
  (expression
    (menu
      (option_kw)))
  (comment)
  (expression
    (menu
      (option_kw)
      (menu_index)
      (menu_code)))
  (input
    (point
      (point_kw)
      (point_a_option
        (point_a_indicator)
        (point_argument
          (point_arithmetic
            (point_num_value
              (point_int))))
        (point_argument
          (point_arithmetic
            (point_unary_operator
              (point_arithmetic
                (point_parenthesized_expression
                  (point_arithmetic
                    (point_binary_operator
                      (point_arithmetic
                        (point_binary_operator
                          (point_arithmetic
                            (point_binary_operator
                              (point_arithmetic
                                (point_identifier))
                              (point_arithmetic
                                (point_identifier))))
                          (point_arithmetic
                            (point_identifier))))
                      (point_arithmetic
                        (point_num_value
                          (point_int)))))))))))))
  (input
    (point
      (point_kw)
      (point_opt_option
        (point_opt_argument_indicator))))
  (input
    (point
      (point_kw)
      (point_opt_option
        (point_opt_argument_indicator)
        (point_opt_argument
          (point_argument
            (point_arithmetic
              (point_identifier))))
        (point_opt_argument
          (point_argument
            (point_arithmetic
              (point_num_value
                (point_int))))))))
  (input
    (point
      (point_kw)
      (point_opt_option
        (point_opt_argument_indicator)
        (point_opt_argument
          (point_argument
            (point_arithmetic
              (point_binary_operator
                (point_arithmetic
                  (point_identifier))
                (point_arithmetic
                  (point_binary_operator
                    (point_arithmetic
                      (point_identifier))
                    (point_arithmetic
                      (point_identifier))))))))
        (point_opt_argument
          (point_argument
            (point_arithmetic
              (point_num_value
                (point_int))))))))
  (input
    (point
      (point_kw)
      (point_a_option
        (point_a_indicator)
        (point_argument
          (point_arithmetic
            (point_num_value
              (point_int))))
        (point_argument
          (point_arithmetic
            (point_unary_operator
              (point_arithmetic
                (point_parenthesized_expression
                  (point_arithmetic
                    (point_binary_operator
                      (point_arithmetic
                        (point_binary_operator
                          (point_arithmetic
                            (point_binary_operator
                              (point_arithmetic
                                (point_identifier))
                              (point_arithmetic
                                (point_identifier))))
                          (point_arithmetic
                            (point_identifier))))
                      (point_arithmetic
                        (point_num_value
                          (point_int)))))))))))))
  (input
    (point
      (point_kw)
      (point_a_option
        (point_a_indicator)
        (point_argument
          (point_arithmetic
            (point_binary_operator
              (point_arithmetic
                (point_binary_operator
                  (point_arithmetic
                    (point_identifier))
                  (point_arithmetic
                    (point_identifier))))
              (point_arithmetic
                (point_num_value
                  (point_int))))))
        (point_argument
          (point_arithmetic
            (point_num_value
              (point_int)))))))
  (input
    (point
      (point_kw)
      (point_reference
        (point_number))))
  (input
    (point
      (point_kw)
      (point_reference
        (point_lit_ind))))
  (input
    (point
      (point_kw)
      (point_reference
        (point_lit_ind))))
  (input
    (point
      (point_kw)
      (point_a_option
        (point_a_indicator)
        (point_argument
          (point_arithmetic
            (point_num_value
              (point_int))))
        (point_argument
          (point_arithmetic
            (point_num_value
              (point_int)))))))
  (input
    (point
      (point_kw)
      (point_reference
        (point_lit_ind))))
  (input
    (point
      (point_kw)
      (point_a_option
        (point_a_indicator)
        (point_argument
          (point_arithmetic
            (point_binary_operator
              (point_arithmetic
                (point_binary_operator
                  (point_arithmetic
                    (point_binary_operator
                      (point_arithmetic
                        (point_identifier))
                      (point_arithmetic
                        (point_identifier))))
                  (point_arithmetic
                    (point_num_value
                      (point_real)))))
              (point_arithmetic
                (point_num_value
                  (point_int))))))
        (point_argument
          (point_arithmetic
            (point_num_value
              (point_real)))))))
  (input
    (point
      (point_kw)
      (point_reference
        (point_ar_reference))))
  (comment)
  (input
    (point
      (point_kw)
      (point_a_option
        (point_a_indicator)
        (point_argument
          (point_arithmetic
            (point_num_value
              (point_int))))
        (point_argument
          (point_arithmetic
            (point_num_value
              (point_int))))
        (point_argument
          (point_arithmetic
            (point_num_value
              (point_int)))))))
  (comment)
  (input
    (point
      (point_kw)
      (point_a_option
        (point_a_indicator)
        (point_immediate_argument
          (point_immediate_int))
        (point_argument
          (point_arithmetic
            (point_identifier)))
        (point_argument
          (point_arithmetic
            (point_identifier))))))
  (comment)
  (comment)
  (comment)
  (input
    (distance
      (distance_kw)
      (arithmetic
        (unary_operator
          (arithmetic
            (general_variable))))))
  (comment)
  (input
    (point
      (point_kw)
      (point_opt_option
        (point_opt_argument_indicator)
        (point_opt_argument
          (point_argument_lit_ind
            (point_insertion_marker))))))
  (input
    (point
      (point_kw)
      (point_opt_option
        (point_opt_argument_indicator)
        (point_opt_argument
          (point_argument
            (point_arithmetic
              (point_identifier))))
        (point_opt_argument
          (point_argument
            (point_arithmetic
              (point_identifier)))))))
  (comment)
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (char_comparison
          (char_expression
            (char_variable
              (char_var_sign)
              (identifier)))
          (comparative_operator)
          (char_expression
            (quoted_char)))))
    (then_kw)
    (condition_alt
      (condition_block
        (expression
          (menu
            (option_kw)
            (menu_index)
            (menu_code)))
        (comment)
        (condition
          (if_kw)
          (logical_expression
            (comparison
              (num_comparison
                (arithmetic
                  (general_variable))
                (comparative_operator)
                (arithmetic
                  (num_value
                    (real))))))
          (then_kw)
          (condition_alt
            (condition_alt_case
              (condition_block
                (input
                  (scal_input
                    (scalar_in)
                    (scal_value
                      (char_value
                        (char_variable
                          (char_var_sign)
                          (identifier))))))
                (input
                  (scal_input
                    (scalar_in)
                    (scal_value
                      (flow_args)))))
              (else_kw)
              (condition_block
                (input
                  (scal_input
                    (scalar_in)
                    (scal_value
                      (char_literal)))))
              (ifend_kw)))))
      (ifend_kw)))
  (esc_statement)
  (comment)
  (input
    (scal_input
      (scalar_in)
      (scal_value
        (char_value
          (char_variable
            (char_var_sign)
            (identifier))))))
  (input
    (scal_input
      (scalar_in)
      (scal_value
        (text_value))))
  (input
    (scal_input
      (scalar_in)
      (scal_value
        (char_value
          (concat_char
            (quoted_char)
            (char_sys_var))))))
  (input
    (scal_input
      (scalar_in)
      (scal_value
        (flow_args))))
  (input
    (scal_input
      (scalar_in)
      (scal_value
        (flow_args))))
  (comment)
  (expression
    (guidance_noarg))
  (end_marker))
