test/corpus/user_guidance.txt
================================================================================
Return user_guidance
================================================================================

START   59

REM Autopilot ein/aus, no argument
APEIN
APAUS

REM Ausgabefenster, argument as string with length 30 (opiniated)
REM TODO: could have a $100n as file, n is the linenumber

ECHO Test

REM parenthesized ECHOS also give out commented strings
(
  ECHO REM FOO
)

REM TODO: no idea what this is doing
HFEIN
HFAUS

REM Kantenzugmarkierung ein/aus, no arguments
MEIN
MAUS

REM Benutzerführungstexte ein/aus, no argumetns
SEIN
SAUS

REM Statuszeile ein/aus, no argment
SZEIN
SZAUS

REM 3D Undo ein/aus, no argument
UDA
UDE

REM Textfenster mit Benutzerführungstext, argument as string with length 30 (opiniated)
REM TODO: Same as ECHO

WAIT Dies ist ein Text

REM Warten gewisse Zeit, argument is the time to wait in seconds, so a int. No arithmetic possible
WARTE 20

REM WAIT Funktion ein/aus. no arguments
WAUS
WEIN

REM Bildneuaufbau, no arguments
ZAE
ZAA

COPY $PATHA $PATHB
COPY $PATHA C:\bla
COPY #:FOO.BAR $PATHC

MKDIR $PATHX
MKDIR C:\bla

OPEN Y:FOO
  OUTPUT $FOO
  INPUT $FOO
  INPUT %ANZF
CLOSE

DEL $FOO
DEL %FOO

FAA
FAE


END

--------------------------------------------------------------------------------

(source_file
  (start_marker)
  (comment)
  (expression
    (guidance_noarg))
  (expression
    (guidance_noarg))
  (comment)
  (comment)
  (expression
    (echo
      (echo_kw)))
  (comment)
  (parenthesis
    (expression
      (echo
        (echo_kw))))
  (comment)
  (expression
    (guidance_noarg))
  (expression
    (guidance_noarg))
  (comment)
  (expression
    (guidance_noarg))
  (expression
    (guidance_noarg))
  (comment)
  (expression
    (guidance_noarg))
  (expression
    (guidance_noarg))
  (comment)
  (expression
    (guidance_noarg))
  (expression
    (guidance_noarg))
  (comment)
  (expression
    (guidance_noarg))
  (expression
    (guidance_noarg))
  (comment)
  (comment)
  (expression
    (wait
      (wait_kw)))
  (comment)
  (expression
    (warte
      (warte_kw)
      (int)))
  (comment)
  (expression
    (guidance_noarg))
  (expression
    (guidance_noarg))
  (comment)
  (expression
    (guidance_noarg))
  (expression
    (guidance_noarg))
  (file_operation
    (file_copy
      (copy_kw)
      (char_variable
        (char_var_sign)
        (identifier))
      (char_variable
        (char_var_sign)
        (identifier))))
  (file_operation
    (file_copy
      (copy_kw)
      (char_variable
        (char_var_sign)
        (identifier))
      (windows_path
        (local_path))))
  (file_operation
    (file_copy
      (copy_kw)
      (hc_path
        (path_indicator)
        (filename))
      (char_variable
        (char_var_sign)
        (identifier))))
  (file_operation
    (mkdir
      (mkdir_kw)
      (char_variable
        (char_var_sign)
        (identifier))))
  (file_operation
    (mkdir
      (mkdir_kw)
      (windows_path
        (local_path))))
  (file_operation
    (file_open
      (open_kw)
      (hc_path
        (path_indicator)
        (filename))))
  (file_operation
    (file_write
      (output_kw)
      (char_variable
        (char_var_sign)
        (identifier))))
  (input
    (scal_input
      (scalar_in
        (input_kw))
      (scal_value
        (char_value
          (char_variable
            (char_var_sign)
            (identifier))))))
  (input
    (scal_input
      (scalar_in
        (input_kw))
      (scal_value
        (num_variable
          (num_var_sign)
          (num_var_name)))))
  (file_operation
    (file_close
      (close_kw)))
  (expression
    (definition
      (assignment
        (del_kw)
        (char_variable
          (char_var_sign)
          (identifier)))))
  (expression
    (definition
      (assignment
        (del_kw)
        (num_variable
          (num_var_sign)
          (num_var_name)))))
  (expression
    (system_function))
  (expression
    (system_function))
  (end_marker))
